# ICEngine

./: CMakeLists.txt
examples/TestApp/: CMakeLists.txt
examples/TestApp/src/: main.cpp
src/: ic_app.cpp
